--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -123,11 +123,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROCESSED 2008\n",
+      "PROCESSED 2009\n",
+      "PROCESSED 2010\n",
+      "PROCESSED 2011\n",
+      "PROCESSED 2012\n",
+      "PROCESSED 2013\n",
+      "PROCESSED 2014\n",
+      "PROCESSED 2015\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "import sys\n",
@@ -141,13 +156,6 @@
     "\n",
     "def collapse_to_hundred(address):\n",
     "    numbers_in_address = [int(s) for s in str.split() if s.isdigit()]\n",
-    "    \n",
-    "def get_number(address):\n",
-    "    numbers_in_address = [int(s) for s in address.split() if s.isdigit()]\n",
-    "    if numbers_in_address:\n",
-    "        return numbers_in_address[0]\n",
-    "    else:\n",
-    "        return None\n",
     "\n",
     "infraction_codes_dict={}\n",
     "fine_amounts_dict={}\n",
@@ -165,7 +173,7 @@
     "        for line in reader:\n",
     "            #infraction_codes[line['infraction_code']]+=1\n",
     "            #fine_amounts[line['set_fine_amount']]+=1\n",
-    "            addresses[collapse_address(line['location2'])].append(get_number(line['location2']))\n",
+    "            addresses[collapse_address(line['location2'])]+=1\n",
     "            #dates[line['date_of_infraction']]+=1\n",
     "    #infraction_codes_dict[years[idx]]=copy.deepcopy(infraction_codes)\n",
     "    #fine_amounts_dict[years[idx]]=copy.deepcopy(fine_amounts)\n",
@@ -178,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -187,12 +195,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<class 'int'>, {'315': 142, '208': 3, '259': 25, '9': 169992, '36': 3, '148': 111, '34': 3, '86': 160, '50': 15, '28': 34874, '33': 3, '15': 40365, '44': 24, '2': 121570, '337': 14145, '35': 4, '11': 519, '18': 50, '21': 28, '248': 55, '345': 3, '68': 142, '311': 2, '82': 14922, '257': 2100, '200': 2, '255': 109, '317': 505, '38': 137, '209': 677, '370': 381, '71': 295, '132': 1, '349': 7, '359': 49, '77': 599, '156': 5, '69': 78, '357': 337, '262': 172, '366': 105, '207': 223311, '154': 2, '308': 15, '55': 5, '264': 10, '309': 3, '192': 18075, '347': 26376, '20': 14, '358': 594, '140': 53, '355': 4319, '85': 66, '79': 720, '364': 480, '362': 96, '341': 1, '319': 2, '369': 622, '25': 5759, '24': 25, '12': 427, '266': 20, '152': 9, '312': 21085, '29': 457684, '37': 1139, '53': 31, '205': 1, '314': 6678, '340': 218, '363': 2405, '39': 13, '14': 4564, '250': 6299, '342': 5, '4': 7121, '361': 13, '52': 3, '305': 2, '265': 246, '344': 2, '30': 23509, '263': 3, '8': 112696, '63': 40, '1': 8660, '346': 3, '83': 85, '335': 171, '65': 37, '150': 2, '338': 1201, '153': 1, '313': 1, '348': 45, '61': 25, '367': 1607, '351': 1, '26': 253, '45': 28, '10': 125, '16': 16054, '360': 159, '64': 2, '220': 3, '318': 3, '72': 3, '307': 719, '31': 2470, '182': 1, '210': 327371, '106': 1, '137': 6, '134': 20346, '147': 1, '70': 78, '6': 90025, '84': 3, '99': 63, '57': 161, '56': 9, '17': 297, '7': 358, '336': 7133, '73': 2, '260': 1, '78': 2, '13': 178, '22': 2, '23': 15, '365': 46, '3': 337908, '189': 3, '211': 20, '155': 2, '59': 1, '206': 2, '32': 4, '46': 9, '310': 4, '368': 34, '80': 7, '42': 1, '5': 565168, '339': 1, '48': 6437, '66': 1, '58': 1780, '81': 6, '19': 1, '356': 327, '316': 1, '212': 9, '304': 2, '60': 5, '62': 19, '49': 4473})\n"
+      "[]\n"
      ]
     }
    ],
    "source": [
-    "print(infraction_codes_dict['2010'])"
+    "print(addresses['2010'])"
    ]
   },
   {
@@ -212,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -221,14 +229,190 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "138131\n"
+      "55230\n"
      ]
     }
    ],
    "source": [
-    "count=0\n",
+    "#testing address resolution: number of addresses with no street number\n",
+    "#api rate limit = 2500 free requests per day\n",
+    "#fuck google\n",
+    "keyset = set()\n",
     "for key in addresses_dict.keys():\n",
-    "    count+=len(addresses_dict[key].keys())\n",
+    "    keyset.update(addresses_dict[key].keys())\n",
+    "print(len(keyset))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROCESSED data/2008.csv\n",
+      "PROCESSED data/2009.csv\n",
+      "PROCESSED data/2010.csv\n",
+      "PROCESSED data/2011.csv\n",
+      "PROCESSED data/2012.csv\n",
+      "PROCESSED data/2013.csv\n",
+      "PROCESSED data/2014.csv\n",
+      "PROCESSED data/2015.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import sys\n",
+    "from collections import defaultdict\n",
+    "import re\n",
+    "\n",
+    "#testing address resolution\n",
+    "def myround(x, base=100):\n",
+    "    return int(base * round(float(x)/base))\n",
+    "\n",
+    "def get_number(address):\n",
+    "    numbers_in_address = [int(s) for s in address.split() if s.isdigit()]\n",
+    "    if numbers_in_address:\n",
+    "        return numbers_in_address[0]\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "def collapse_to_street(address):\n",
+    "    return re.sub(\"^\\d+\\s|\\s\\d+\\s|\\s\\d+$\", \"\", address)\n",
+    "\n",
+    "csv.field_size_limit(sys.maxsize)\n",
+    "years=['2008','2009','2010','2011','2012','2013','2014','2015']\n",
+    "files_to_open=['data/'+year+'.csv' for year in years]\n",
+    "addresses100 = defaultdict(set)\n",
+    "for idx,file in enumerate(files_to_open):\n",
+    "    with open(file, 'rt', encoding='utf8') as f:\n",
+    "        reader = csv.DictReader(f)\n",
+    "        for line in reader:\n",
+    "            address = get_number(line['location2'])\n",
+    "            if address:\n",
+    "                addresses100[collapse_to_street(line['location2'])].add(myround(address))\n",
+    "    print(\"PROCESSED \"+file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DOVERCOURT RD 1118\n",
+      "DUFFERIN ST 1479\n",
+      "BLOOR ST W 2787\n",
+      "YONGE ST 4049\n",
+      "KINGSTON RD 1467\n",
+      "GERRARD ST E 1805\n",
+      "BATHURST ST 1525\n",
+      "QUEEN ST E 2285\n",
+      "WESTON RD 1423\n",
+      "LAKE SHORE BLVD W 1424\n",
+      "DAVENPORT RD 1236\n",
+      "KING ST W 1303\n",
+      "JANE ST 1033\n",
+      "DUNDAS ST W 3003\n",
+      "EGLINTON AVE W 1855\n",
+      "COLLEGE ST 1366\n",
+      "QUEEN ST W 1775\n",
+      "ST CLAIR AVE W 1768\n",
+      "LANSDOWNE AVE 1039\n",
+      "DANFORTH AVE 2624\n",
+      "553931\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ADDRESSES VARIABLE = DICT OF SETS OF ADDRESSES UNROUNDED!\n",
+    "count=0\n",
+    "for key in addresses.keys():\n",
+    "    address_count = len(addresses[key])\n",
+    "    if address_count > 1000:\n",
+    "        print(key,address_count)\n",
+    "    count+=address_count\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DUFFERIN ST 118\n",
+      "BLOOR ST W 179\n",
+      "YONGE ST 218\n",
+      "KINGSTON RD 133\n",
+      "BATHURST ST 130\n",
+      "QUEEN ST E 135\n",
+      "WESTON RD 116\n",
+      "JANE ST 107\n",
+      "KEELE ST 104\n",
+      "DUNDAS ST W 165\n",
+      "EGLINTON AVE W 123\n",
+      "SHEPPARD AVE E 140\n",
+      "COLLEGE ST 108\n",
+      "QUEEN ST W 113\n",
+      "DANFORTH AVE 140\n",
+      "LAWRENCE AVE E 119\n",
+      "87991\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ADDRESSES50 VARIABLE = DICT OF SETS OF ADDRESSES ROUNDED TO NEAREST 50!\n",
+    "count=0\n",
+    "for key in addresses50.keys():\n",
+    "    address_count = len(addresses50[key])\n",
+    "    if address_count > 100:\n",
+    "        print(key,address_count)\n",
+    "    count+=address_count\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DUNDAS ST W 112\n",
+      "BLOOR ST W 127\n",
+      "YONGE ST 146\n",
+      "70550\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ADDRESSES100 VARIABLE = DICT OF SETS OF ADDRESSES ROUNDED TO 100!\n",
+    "count=0\n",
+    "for key in addresses100.keys():\n",
+    "    address_count = len(addresses100[key])\n",
+    "    if address_count > 100:\n",
+    "        print(key,address_count)\n",
+    "    count+=address_count\n",
     "print(count)"
    ]
   },
